feat(v1.0): first steps toward v1.0, with first alpha version